fixed responsiveness on small device

--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,6 @@ footer div {
     }
 
     .grid-item12 {
-        /* grid-row: span 0; */
         grid-column: span 1;
     }
 
@@ -318,7 +317,6 @@ footer div {
 
     img {
         display: block;
-        max-height: 100%;
         height: auto;
         width: 100%;
     }
